# azuremlconstructor

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt
amlctor/: __init__.py  __main__.py  _utils.py  amlctor.py  core.py  exceptions.py  input.py  schemas.py  utils.py
amlctor/apply/: apply.py  env.py
amlctor/confs/: configs.py
amlctor/denv/: denv.py  dot_env_loader.py
amlctor/init/: args_handling.py  init.py  init_structure.py
amlctor/rename/: rename.py
amlctor/run/: run.py
amlctor/src/templates/apply/: utils.py
amlctor/src/templates/init/: settings
amlctor/tests/apply/: test_apply_path.py
amlctor/tests/init/: test_env_bank.py
amlctor/update/: update.py
azuremlconstructor/: __init__.py  __main__.py  core.py  input.py  schemas.py  utils.py
azuremlconstructor/apply/: apply.py
azuremlconstructor/denv/: denv.py  dot_env_loader.py
azuremlconstructor/init/: args_handling.py  init.py  init_structure.py
azuremlconstructor/rename/: rename.py
azuremlconstructor/run/: run.py
azuremlconstructor/tests/apply/: test_apply_path.py
azuremlconstructor/tests/init/: test_env_bank.py
azuremlconstructor/update/: update.py
confs/: configs.py
confs/ebs/: test_eb.acc
core/: init.py
core/init/: args_handling.py  init.py  init_structure.py
dev/: .gitignore  ideas.md  todo.md
src/templates/apply/: aml  data_loaders
src/templates/init/: conda_dependencies.txt  dot_amlignore  dot_amlignore.txt  dot_env  dot_env.txt  env_vars  env_vars.txt  settings  settings.txt
test/find_dups/: aml.py  data_loader.py  script.py
test/settings/: settings.py
tests/init/: test_env_bank.py
(+8 files in other folders)
